# NixRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: vk_mem_alloc.h
include/SDL/: SDL_events.h
include/vulkan/: spirv.h  spirv.hpp  spirv.hpp11  spirv.json  spirv.lua  spirv.py  vulkan.hpp
lib/Windows/x64/: SDL2main.lib
source/: CMakeLists.txt
source/common/: NixApplication.h  NixJpDecl.h  NixJpEnum.txt  NixJpImp.cpp  NixRenderer.h
source/module/: CMakeLists.txt
source/module/TinyUI/: CMakeLists.txt  NixUIImage.cpp  NixUIImage.h  NixUILabel.cpp  NixUILabel.h  NixUILayout.h  NixUISystem.cpp  NixUISystem.h  NixUIWidget.cpp  NixUIWidget.h  NixUIWidgetUtils.cpp  NixUIWidgetUtils.h
source/module/UIRenderer/: CMakeLists.txt  NixFontTextureManager.cpp  NixTextBuilder.cpp  NixUIDefine.h  NixUIMeshBuffer.cpp  NixUIMeshBuffer.h  NixUIRenderer.cpp  NixUIRenderer.h  NixUITextureManager.cpp  NixUITextureManager.h  NixUIUtils.cpp  NixUIUtils.h
source/platform/Android/SDL2/: CMakeLists.txt  main.cpp
source/platform/Linux/: LinuxMain.cpp
source/platform/Windows/SDL2/: SDL2Main.cpp
source/platform/Windows/WinMain/: Resource.h  WinMain.aps  WinMain.cpp  WinMain.rc
source/renderer/: CMakeLists.txt
source/renderer/metal/: CMakeLists.txt
source/renderer/vulkan/: ArgumentVk.cpp  ArgumentVk.h  BuddySystemAllocator.h  BufferAllocator.cpp  BufferAllocator.h  BufferVk.cpp  BufferVk.h  CMakeLists.txt  ContextVk.cpp  ContextVk.h  DDSLoader.cpp  DDSLoader.h  DebuggerVk.cpp  DebuggerVk.h  DeferredDeletor.cpp  DeferredDeletor.h  DescriptorSetVk.cpp  DescriptorSetVk.h  DriverVk.cpp  DriverVk.h  KTXLoader.cpp  KTXLoader.h  MaterialVk.cpp  MaterialVk.h  PipelineVk.cpp  PipelineVk.h  QueueVk.cpp  QueueVk.h  RenderPassVk.cpp  RenderPassVk.h  RenderableVk.cpp  RenderableVk.h  RingBuffer.cpp  RingBuffer.h  ShaderVk.cpp  ShaderVk.h  SwapchainVk.cpp  SwapchainVk.h  TextureVk.cpp  TextureVk.h  (+9 more)
source/renderer/vulkan/compiler/: GLSLCompiler.cpp  GLSLCompiler.h  ResourceLimits.cpp  SPIRVReflection.cpp  SPIRVReflection.h
source/renderer/vulkan/vkhelper/: helper.cpp  helper.h
source/samples/: CMakeLists.txt  FreeCamera.cpp  FreeCamera.h
source/samples/Android/: AndroidMain.cpp  CMakeLists.txt  JNIBridge.cpp
source/samples/BasicShading/: BasicShading.cpp  BasicShading.h  BuddySystemAllocator.cpp  BufferAllocator.cpp  BufferAllocator.h  CMakeLists.txt
source/samples/ClearScreen/: CMakeLists.txt  ClearScreen.cpp
source/samples/DX12Test/: CMakeLists.txt  HelloDX12.cpp
source/samples/HDR/: CMakeLists.txt  HDR.cpp  HDR.h
source/samples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
source/samples/Host2DFFT/: CMakeLists.txt  Host2DFFT.cpp
source/samples/Host2DFFTFilter/: CMakeLists.txt  Host2DFFTFilter.cpp
source/samples/PBR/: CMakeLists.txt  PBR.cpp
source/samples/PhysXCCT/: CMakeLists.txt  PhysXCCT.cpp  PhysXCCT.h
source/samples/PhysXParticle/: CMakeLists.txt  ParticleManager.cpp  ParticleManager.h  PhysXControllerManager.cpp  PhysXControllerManager.h  PhysXParticle.cpp  PhysXParticle.h  PhysXScene.cpp  PhysXScene.h  PhysXSystem.cpp  PhysXSystem.h  PhysxHeightField.cpp  PhysxHeightField.h  Player.cpp  Player.h
source/samples/SaveTexArrayRawData/: CMakeLists.txt  SaveTexArrayRawData.cpp
source/samples/Sphere/: CMakeLists.txt  Sphere.cpp
source/samples/SphereGeometry/: CMakeLists.txt  Sphere.cpp  SphereGeometry.cpp
source/samples/TerrainTessellation/: CMakeLists.txt  TerrainTessellation.cpp
source/samples/TexEncoder/: CMakeLists.txt  TexEncoder.cpp
source/samples/TextAPITest/: CMakeLists.txt  TextAPITest.cpp  TextAPITest.h
source/samples/TextRenderer/: CMakeLists.txt  NixFont.cpp  NixFont.h  NixFontTextureManager.cpp  NixFontTextureManager.h  NixTextBuilder.cpp  NixUIDefine.h  NixUIDrawDataHeap.cpp  NixUIDrawDataHeap.h  NixUIMeshBuffer.cpp  NixUIMeshBuffer.h  NixUIRenderer.cpp  NixUIRenderer.h  NixUITexture.h  NixUITextureManager.cpp  NixUITextureManager.h  NixUIUtils.h  TextBuilder.cpp  TextBuilder.h  TextRenderer.cpp  TextRenderer.h
source/samples/Triangle/: CMakeLists.txt  Triangle.cpp
source/samples/TriangleCompute/: CMakeLists.txt  Triangle.cpp
source/samples/TriangleTessellation/: CMakeLists.txt  TriangleTessellation.cpp
source/samples/VkCompiler/: CMakeLists.txt  VkCompiler.cpp
source/samples/VkCompilerSample/: CMakeLists.txt  VkCompilerSample.cpp
source/samples/WavefrontModel/: CMakeLists.txt  WavefrontModel.cpp
source/utility/: CMakeLists.txt
source/utility/TexturePacker/: CMakeLists.txt  TexturePacker.cpp  TexturePacker.h
source/utility/VkShaderCompiler/: CMakeLists.txt  VkShaderCompiler.cpp  VkShaderCompiler.h
thirdpart/: CMakeLists.txt  glslang.bat  spirv-cross.bat  stb_image.h  vk_mem_alloc.h
thirdpart/nix/: CMakeLists.txt
thirdpart/nix/io/: archieve.cpp  archieve.h  io.h  standardIo.cpp
thirdpart/nix/memory/: BuddySystemAllocator.cpp
thirdpart/nix/string/: .repo  encoding.cpp  encoding.h  path.cpp  path.h
